# rusty_visio_parser

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: constants.rs  get_metadata.rs  helpers.rs  lib.rs  main.rs  vsd_constants.rs
src/VSDInternalStream/: mod.rs
src/VSDParser/: mod.rs
src/helpers/: mod.rs
src/parser_emf/: mod.rs
src/parser_vsd/: mod.rs  utils.rs  vsdparser.rs
src/parser_vsdx/: get_metadata.rs  helpers.rs  mod.rs
