[package]
name = "rusty_visio_parser"
version = "0.0.1"
edition = "2024"
author = "Dragon3DGraff"

[dependencies]
  zip = "2.6.1"
  xml = "0.8.16"
  serde_json = "1.0.140"
  serde = { version = "1.0.219", features = ["derive"] }
  quickxml_to_serde = "0.6.0"
  byteorder = "1.5.0"
  cfb = "0.10.0"
  thiserror = "1.0"
  log = "0.4"  # Для логгирования
  encoding_rs = "0.8.35"
  lazy_static = "1.5.0"
